# university

./: .gitignore  .gitmodules  README.md
calculus/: master.tex  preamble.tex
calculus/lecture-notes/: master.tex
calculus/lecture-notes/figures/: fig_03.pdf_tex
calculus/lecture_notes/: master.tex  preamble.tex
calculus/lecture_notes/figures/: fig_01.pdf_tex  fig_02.pdf_tex
calculus/lectures/course_2/: lec_01.tex  lec_02.tex  lec_03.tex  lec_04.tex  lec_05.tex  lec_06.tex  lec_07.tex  lec_08.tex
comprehensive-analysis/lecture-notes/: master.tex  preamble.tex
comprehensive-analysis/lecture-notes/figures/: fig_01.pdf_tex
comprehensive-analysis/lecture-notes/lectures/: lec_1.tex  lec_2.tex  lec_3.tex  lec_5.tex
course-2/semester-1/: preamble.tex
course-2/semester-2/: preamble.tex
differential-equations/lecture-notes/: master.tex
optimization-methods/lecture-notes/: master.tex
philosophy/lecture-notes/: master.tex  preamble.tex
phll/semester-4rd/task0/: CMakeLists.txt
phll/semester-4rd/task0/task0/task0app/src/: task0app.cc
phll/semester-4rd/task0/task0/task0lib/include/: task0lib.h
phll/semester-4rd/task0/task0/task0lib/include/utils/: box_struct.h
phll/semester-4rd/task0/task0/task0lib/src/utils/: box_struct.cc
phll/semester-4rd/task1/: CMakeLists.txt
phll/semester-4rd/task1/task1/task1lib/include/: task1lib.h
phll/semester-4rd/task1/task1/task1lib/src/: task1lib.cc
plm/3rd-semester/: pom.xml
probability-theory/lecture-notes/: master.tex
tacc/lecture-notes/: master.tex
tafl/lecture-notes/: master.tex  preamble.tex
(+379 files in other folders)
