# cmake_minimum_required(VERSION 3.10)

# project(task0)

# add_executable(MyExecutable task0/task0app/src/task0app.cc)

# add_library(MyLibrary
#     task0/task0lib/src/task0lib.cc
#     task0/task0lib/src/utils/box_struct_functions.cc
#     task0/task0lib/src/utils/box_struct.cc
#     task0/task0lib/src/utils/weight_limit_exception.cc
# )

# target_include_directories(MyLibrary PUBLIC
#     task0/task0lib/include
#     task0/task0lib/include/utils
# )

# target_link_libraries(MyExecutable PRIVATE MyLibrary)